--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -4,6 +4,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="RiskiInsurance.MainWindow"
-        Title="RiskiInsurance">
-    <TextBlock Text="Hello World!" />
+        Title="RiskiInsurance"
+		Width="600"
+		Height="400">
+    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Center" RowDefinitions="Auto,Auto" Margin="50">
+		<Grid ColumnDefinitions="*,Auto" Margin="10">
+			<TextBox Name="NameBox" />
+			<Button Content="OK" Click="SayHello" Grid.Column="1" />
+		</Grid>
+		<TextBlock Text="Please type your name" Name="ResultLabel" Grid.Row="1" Margin="10" HorizontalAlignment="Center" FontWeight="Bold" />
+	</Grid>
 </Window>
