--- a/Client/src/MainWindow.axaml
+++ b/Client/src/MainWindow.axaml
@@ -1,24 +1,17 @@
 <Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:app="using:RiskiInsurance"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="RiskiInsurance.MainWindow"
-        Title="RiskiInsurance"
+		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+		x:Class="RiskiInsurance.MainWindow"
+		Title="RiskiInsurance"
 		Width="600"
 		Height="450">
-	
-    <Grid RowDefinitions="Auto,*,Auto" Margin="10" >
-		<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
-			<TextBlock Text="Total: $" Classes="Title Center" />
-			<TextBlock Name="TotalLabel" Text="0" Classes="Title Center" />
-		</StackPanel>
 
-		<app:InputForm Name="InputForm" Grid.Row="1" />
-
-		<Button Content="Submit" Click="SubmitRecord" Grid.Row="3" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" CornerRadius="10" />
-	</Grid>
+	<Carousel Name="ViewHolderInstance" >
+		<app:InputForm />
+	</Carousel>
 
 	<Window.Styles>
 		<Style Selector="TextBlock.Title">
