--- a/Client/src/RecordDetails/RecordDetails.axaml
+++ b/Client/src/RecordDetails/RecordDetails.axaml
@@ -5,6 +5,12 @@
 		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 		x:Class="RiskiInsurance.RecordDetails"
 		>
-	<Rectangle Fill="#80000000" >
-	</Rectangle>
+	<Panel>
+		<Rectangle Fill="#80000000" />
+		<Border>
+			<Grid>
+				
+			</Grid>
+		</Border>
+	</Panel>
 </UserControl>
