View Record Page work

--- a/Client/src/MainWindow.axaml
+++ b/Client/src/MainWindow.axaml
@@ -12,6 +12,7 @@
 	<Carousel Name="ViewHolderInstance" >
 		<app:MainView />
 		<app:InputForm />
+		<app:RecordsList />
 	</Carousel>
 
 	<Window.Styles>
