--- a/Client/src/MainView/MainView.axaml
+++ b/Client/src/MainView/MainView.axaml
@@ -10,8 +10,8 @@
 		<TextBlock Text="Insurance Management" HorizontalAlignment="Center" FontSize="32" FontWeight="Bold" Margin="10" />
 
 		<StackPanel VerticalAlignment="Center" Grid.Row="1" >
-			<Button Content="Add Record" Margin="10" />
-			<Button Content="View Records" Margin="10" />
+			<Button Content="Add Record" Margin="10" Click="OpenAddRecord"/>
+			<Button Content="View Records" Margin="10" Click="OpenViewRecords"/>
 		</StackPanel>
 
 		<TextBlock Text="(C)opyright RiskiInsurance, 2023" HorizontalAlignment="Center" Grid.Row="2" Foreground="#888888" />
