--- a/Client/src/RecordDetails/RecordDetails.axaml
+++ b/Client/src/RecordDetails/RecordDetails.axaml
@@ -6,11 +6,21 @@
 		x:Class="RiskiInsurance.RecordDetails"
 		>
 	<Panel>
-		<Rectangle Fill="#80000000" />
+		<Rectangle Fill="#000000" />
 		<Border>
-			<Grid>
-				
+			<Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto" ColumnDefinitions="*, Auto">
+				<Button Grid.Column="1" Content="{Binding	ExitButtonText}"/>
+				<Label Content="Test" Grid.Row="1"/>
+				<Label Content="Test" Grid.Row="2"/>
+				<Label Content="Test" Grid.Row="3"/>
+				<Label Content="Test" Grid.Row="4"/>
 			</Grid>
 		</Border>
 	</Panel>
+	<UserControl.Styles>
+		<Style Selector="Label">
+			<Setter Property="Foreground" Value="White">
+			</Setter>
+		</Style>
+	</UserControl.Styles>
 </UserControl>
