--- a/Client/src/InputForm/InputForm.axaml
+++ b/Client/src/InputForm/InputForm.axaml
@@ -13,33 +13,39 @@
 		</StackPanel>
 
 		<ScrollViewer Grid.Row="1" >
-			<Grid ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto" Margin="10" >
+			<Grid ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto" Margin="10" >
 				
-				<TextBlock Text="Rider Age" />
-				<NumericUpDown Name="RiderAgeBox" ValueChanged="NumberFieldUpdated" Minimum="16" Maximum="60" Grid.Column="1" />
-
-				<TextBlock Text="Rider Experience" Grid.Row="1" />
-				<NumericUpDown Name="RiderExperienceBox" ValueChanged="NumberFieldUpdated" Maximum="5" Grid.Column="1" Grid.Row="1" />
-
-				<TextBlock Text="Ski Power (kw/h)" Grid.Row="2" />
-				<NumericUpDown Name="SkiPowerBox" ValueChanged="NumberFieldUpdated" Maximum="200" Grid.Column="1" Grid.Row="2" />
+				<TextBlock Text="Rider Name" />
+				<TextBox Name="RiderNameBox" TextChanged="TextFieldUpdated" Grid.Column="1" />
 				
-				<TextBlock Text="Ski Seats" Grid.Row="3" />
-				<NumericUpDown Name="SkiSeatsBox" ValueChanged="NumberFieldUpdated" Minimum="1" Maximum="3" Grid.Column="1" Grid.Row="3" />
+				<TextBlock Text="Rider Age" Grid.Row="1" />
+				<NumericUpDown Name="RiderAgeBox" ValueChanged="NumberFieldUpdated" Minimum="16" Maximum="60" Grid.Column="1" Grid.Row="1" />
 
-				<TextBlock Text="Ski Price" Grid.Row="4" />
-				<NumericUpDown Name="SkiPriceBox" ValueChanged="NumberFieldUpdated" Grid.Column="1" Grid.Row="4" />
+				<TextBlock Text="Rider Experience" Grid.Row="2" />
+				<NumericUpDown Name="RiderExperienceBox" ValueChanged="NumberFieldUpdated" Minimum="0" Maximum="5" Grid.Column="1" Grid.Row="2" />
 
-				<TextBlock Text="Ski Age" Grid.Row="5" />
-				<NumericUpDown Name="SkiAgeBox" ValueChanged="NumberFieldUpdated" Grid.Column="1" Grid.Row="5" />
+				<TextBlock Text="Ski Power (kw/h)" Grid.Row="3" />
+				<NumericUpDown Name="SkiPowerBox" ValueChanged="NumberFieldUpdated" Minimum="0" Maximum="200" Grid.Column="1" Grid.Row="3" />
+				
+				<TextBlock Text="Ski Seats" Grid.Row="4" />
+				<NumericUpDown Name="SkiSeatsBox" ValueChanged="NumberFieldUpdated" Minimum="1" Maximum="3" Grid.Column="1" Grid.Row="4" />
 
-				<TextBlock Text="Excess" Grid.Row="6" />
-				<NumericUpDown Name="ExcessBox" ValueChanged="NumberFieldUpdated" Grid.Column="1" Grid.Row="6" />
+				<TextBlock Text="Ski Price" Grid.Row="5" />
+				<NumericUpDown Name="SkiPriceBox" ValueChanged="NumberFieldUpdated" Minimum="0" Grid.Column="1" Grid.Row="5" />
+
+				<TextBlock Text="Ski Age" Grid.Row="6" />
+				<NumericUpDown Name="SkiAgeBox" ValueChanged="NumberFieldUpdated" Minimum="0" Grid.Column="1" Grid.Row="6" />
+
+				<TextBlock Text="Excess" Grid.Row="7" />
+				<NumericUpDown Name="ExcessBox" ValueChanged="NumberFieldUpdated" Minimum="0" Grid.Column="1" Grid.Row="7" />
 
 			</Grid>
 		</ScrollViewer>
 
-		<Button Content="Submit" Click="SubmitRecord" Grid.Row="3" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" CornerRadius="10" />
+		<Grid ColumnDefinitions="Auto,*" Grid.Row="3" >
+			<Button Content="Back" Click="BackClicked" CornerRadius="10" Margin="2" />
+			<Button Content="Submit" Click="SubmitRecord" Grid.Column="1" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" CornerRadius="10" Margin="2" />
+		</Grid>
 	</Grid>
 
 	<UserControl.Styles>
