--- a/Client/src/RecordsList/RecordsList.axaml
+++ b/Client/src/RecordsList/RecordsList.axaml
@@ -2,14 +2,18 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:app="using:RiskiInsurance"
 		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 		x:Class="RiskiInsurance.RecordsList"
 		>
 	
-	<ScrollViewer>
-		<ListBox Name="RecordsListBox" >
-		</ListBox>
-	</ScrollViewer>
+	<Panel>
+		<app:RecordDetails IsVisible="true" />
+		<ScrollViewer>
+			<StackPanel Name="RecordsListBox" >
+			</StackPanel>
+		</ScrollViewer>
+	</Panel>
 
 	<UserControl.Styles>
 		<Style Selector="TextBlock">
