--- a/Client/src/RecordDetails/RecordDetails.axaml
+++ b/Client/src/RecordDetails/RecordDetails.axaml
@@ -8,12 +8,16 @@
 	<Panel>
 		<Rectangle Fill="#000000" />
 		<Border>
-			<Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto" ColumnDefinitions="*, Auto">
+			<Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto" ColumnDefinitions="*, Auto">
 				<Button Grid.Column="1" Content="{Binding ExitButtonText}"/>
-				<Label Content="Test" Grid.Row="1"/>
-				<Label Content="Test" Grid.Row="2"/>
-				<Label Content="Test" Grid.Row="3"/>
-				<Label Content="Test" Grid.Row="4"/>
+				<Label Content="Test" Grid.Row="1" Name="NameField"/>
+				<Label Content="Test" Grid.Row="2" Name="AgeField"/>
+				<Label Content="Test" Grid.Row="3" Name="ExperienceField"/>
+				<Label Content="Test" Grid.Row="4" Name="SkiPowerField"/>
+				<Label Content="Test" Grid.Row="5" Name="SkiSeatsField"/>
+				<Label Content="Test" Grid.Row="6" Name="SkiPriceField"/>
+				<Label Content="Test" Grid.Row="7" Name="SkiAgeField"/>
+				<Label Content="Test" Grid.Row="7" Name="ExcessField"/>
 			</Grid>
 		</Border>
 	</Panel>
