Records Are now parsed correctly using an intermediate struct. the records list is now populated from said records

--- a/Client/src/RecordsList/RecordsList.axaml
+++ b/Client/src/RecordsList/RecordsList.axaml
@@ -8,7 +8,7 @@
 		>
 	
 	<Panel>
-		<app:RecordDetails IsVisible="true" />
+		<app:RecordDetails IsVisible="false" />
 		<ScrollViewer>
 			<StackPanel Name="RecordsListBox" >
 			</StackPanel>
