Records Are fetched every time the record view page is opened allowing for new records sent from any machine to the server while the app is running to be seen

--- a/Client/src/MainWindow.axaml
+++ b/Client/src/MainWindow.axaml
@@ -10,9 +10,9 @@
 		Height="500">
 
 	<Carousel Name="ViewHolderInstance" >
-		<app:MainView />
-		<app:InputForm />
-		<app:RecordsList />
+		<app:MainView Name="MainViewPage"/>
+		<app:InputForm Name="InputFormPage"/>
+		<app:RecordsList Name="RecordsListPage"/>
 	</Carousel>
 
 	<Window.Styles>
