--- a/Client/src/RecordItem/RecordItem.axaml
+++ b/Client/src/RecordItem/RecordItem.axaml
@@ -6,12 +6,12 @@
 		x:Class="RiskiInsurance.RecordItem"
 		>
 
-		<Border>
+		<Border Background="{DynamicResource SystemControlBackgroundBaseLowBrush}" Margin="10" Padding="10" CornerRadius="15" >
 			<Grid ColumnDefinitions="*,Auto" >
 				<Grid RowDefinitions="Auto,*" >
 					<TextBlock Name="TitleLabel" />
 					
-					<StackPanel>
+					<StackPanel Grid.Row="1">
 						<StackPanel Orientation="Horizontal" >
 							<TextBlock Text="Date: " />
 							<TextBlock Name="DateLabel" />
@@ -24,7 +24,7 @@
 
 				</Grid>
 
-				<Button Content=">" Click="ShowDetails" />
+				<Button Content=">" Click="ShowDetails" Grid.Column="1" />
 			</Grid>
 		</Border>
 </UserControl>
