--- a/Client/RiskiInsurance/src/AppView/AppView.axaml
+++ b/Client/RiskiInsurance/src/AppView/AppView.axaml
@@ -6,11 +6,31 @@
 		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 		x:Class="RiskiInsurance.AppView">
 
-	<Carousel Name="ViewHolderInstance" >
-		<app:MainView Name="MainViewPage"/>
-		<app:InputForm Name="InputFormPage"/>
-		<app:RecordsList Name="RecordsListPage"/>
-	</Carousel>
+	<Panel>
+		<Panel Name="ViewHolderInstance" >
+			<app:MainView />
+		</Panel>
+		<Border Name="NetworkLabelBorder" HorizontalAlignment="Right" VerticalAlignment="Bottom" Background="#00ff00" CornerRadius="5,0,0,0" Classes="Visible" >
+			<TextBlock Name="NetworkLabel" Foreground="Black" Text="" Padding="5" />
+
+			<Border.Styles>
+				<Style Selector="Border.Visible">
+					<Setter Property="RenderTransform" Value="translate(0px)"/>
+					<Setter Property="Opacity" Value="1"/>
+				</Style>
+				<Style Selector="Border">
+					<Setter Property="RenderTransform" Value="translate(0px, 20px)"/>
+					<Setter Property="Opacity" Value="0"/>
+				</Style>
+			</Border.Styles>
+			<Border.Transitions>
+				<Transitions>
+					<DoubleTransition Property="Opacity" Duration="0:0:0.1"/>
+					<TransformOperationsTransition Property="RenderTransform" Duration="0:0:0.1"/>
+				</Transitions>
+			</Border.Transitions>
+		</Border>
+	</Panel>
 
 	<UserControl.Styles>
 		<Style Selector="TextBlock.Title">
