--- a/Client/RiskiInsurance/src/MainView/MainView.axaml
+++ b/Client/RiskiInsurance/src/MainView/MainView.axaml
@@ -10,8 +10,8 @@
 		<TextBlock Text="Insurance Management" HorizontalAlignment="Center" FontSize="32" FontWeight="Bold" Margin="10" />
 
 		<StackPanel VerticalAlignment="Center" Grid.Row="1" >
-			<Button Content="Add Record" Margin="10" Click="OpenAddRecord" />
-			<Button Content="View Records" Margin="10" Click="OpenViewRecords" />
+			<Button Content="Add Record" Margin="10" Click="OpenAddRecord" CornerRadius="10" />
+			<Button Content="View Records" Margin="10" Click="OpenViewRecords" CornerRadius="10" />
 		</StackPanel>
 
 		<TextBlock Text="© RiskiInsurance, 2023" HorizontalAlignment="Center" Grid.Row="2" Foreground="#888888" />
