--- a/Client/RiskiInsurance/src/RecordDetails/RecordDetails.axaml
+++ b/Client/RiskiInsurance/src/RecordDetails/RecordDetails.axaml
@@ -6,7 +6,7 @@
 		x:Class="RiskiInsurance.RecordDetails" >
 	<Panel>
 		<Rectangle Fill="#77777777" />
-		<Border Background="{DynamicResource SystemRegionBrush}" Width="300" Height="400" CornerRadius="14" Padding="15" >
+		<Border Background="{DynamicResource SystemRegionBrush}" Width="500" Height="400" CornerRadius="14" Padding="15" >
 			<Grid ColumnDefinitions="*, Auto" >
 				<StackPanel Grid.Column="1" VerticalAlignment="Top" >
 					<Button Content="🗙" Click="CloseDetails" />
@@ -15,7 +15,7 @@
 				</StackPanel>
 				<ScrollViewer>
 					<Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto" >
-						<WrapPanel Orientation="Horizontal" Background="Red" >
+						<WrapPanel Orientation="Horizontal" Margin="0,0,0,10" >
 							<TextBlock Text="Name:" FontSize="22" FontWeight="Bold"/>
 							<TextBlock Name="NameField" FontSize="22" />
 						</WrapPanel>
