Rewrite V server to use SQLite and add AppImage build

--- a/Client/RiskiInsurance/src/RecordsList/RecordsList.axaml
+++ b/Client/RiskiInsurance/src/RecordsList/RecordsList.axaml
@@ -25,6 +25,7 @@
 						<ComboBoxItem Content="SkiAge"/>
 						<ComboBoxItem Content="Excess"/>
 					</ComboBox>
+					<ToggleButton Name="ReverseSortButton" Content="⇅" />
 				</StackPanel>
 			</Grid>
 			
